--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -143,49 +143,14 @@
         app:layout_constraintStart_toStartOf="@+id/edittext_certificationCode"
         app:layout_constraintTop_toBottomOf="@+id/textview_certificationCodeProblem" />
 
-    <LinearLayout
+    <include
         android:id="@+id/layout_alert"
-        android:layout_width="match_parent"
+        layout="@layout/dialog_alert"
+        android:layout_width="0dp"
         android:layout_height="260dp"
-        android:background="@drawable/box_alert"
-        android:orientation="vertical"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <TextView
-            android:id="@+id/textview_reconfirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="47dp"
-            android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/certification_code_resend"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/textview_reconfirm_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/email_reconfirm"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/button_resend"
-            android:layout_width="318dp"
-            android:layout_height="56dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="38dp"
-            android:backgroundTint="@color/main_theme_blue"
-            android:fontFamily="@font/noto_sans_bold"
-            android:text="@string/certification_resend"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
