--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="47dp"
         android:fontFamily="@font/noto_sans_bold"
         android:text="@string/certification_code_resend"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
