--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -85,6 +85,7 @@
         style="@style/TtuckTtakButton"
         android:layout_width="318dp"
         android:layout_height="wrap_content"
+        android:enabled="false"
         android:text="@string/certification_code"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/edittext_email"
