--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/main_theme_blue">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--  TODO: 추후 디자인 변경 예정. 디자인 변경 시 추후 작업  -->
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.gachon.ttuckttak.ui.main.StartViewmodel" />
+    </data>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_start"
-        android:layout_width="318dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_rectangle_round"
-        android:backgroundTint="@color/general_theme_white"
-        android:text="@string/start"
-        android:textColor="@color/main_theme_blue"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/main_theme_blue">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!--  TODO: 추후 디자인 변경 예정. 디자인 변경 시 추후 작업  -->
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_start"
+            android:layout_width="318dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/general_theme_white"
+            android:text="@string/start"
+            android:onClick="@{() ->viewmodel.goNext()}"
+            android:textColor="@color/main_theme_blue"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
