--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,101 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/general_theme_black"
-    tools:context=".ui.login.LandingActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:id="@+id/layout_welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25">
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.gachon.ttuckttak.ui.login.LandingViewmodel" />
+    </data>
 
-        <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/general_theme_black"
+        tools:context=".ui.login.LandingActivity">
+
+        <LinearLayout
+            android:id="@+id/layout_welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.25"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.25">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:includeFontPadding="false"
+                android:text="@string/text_welcome1"
+                android:textColor="@color/general_theme_white"
+                android:textFontWeight="700"
+                android:textSize="38sp"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:includeFontPadding="false"
+                android:text="@string/text_welcome2"
+                android:textColor="@color/general_theme_white"
+                android:textFontWeight="700"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <!-- Todo: 피그마 비율대로 했는데 조금 다름. 수정 필요   -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_regular"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="110dp"
+            android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/general_theme_white"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:includeFontPadding="false"
-            android:text="@string/text_welcome1"
-            android:textColor="@color/general_theme_white"
-            android:textFontWeight="700"
-            android:textSize="38sp"
-            tools:ignore="HardcodedText" />
+            android:onClick="@{() -> viewmodel.goJoinPart1Activity()}"
+            android:text="@string/sign_up"
+            android:textColor="@color/main_theme_blue"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.07"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layout_welcome"
+            app:layout_constraintWidth_percent="0.88" />
+
+        <ImageButton
+            android:id="@+id/imagebutton_google"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_google"
+            app:layout_constraintEnd_toEndOf="@id/button_regular"
+            app:layout_constraintStart_toStartOf="@id/button_regular"
+            app:layout_constraintTop_toBottomOf="@id/button_regular" />
+
+        <ImageButton
+            android:id="@+id/imagebutton_kakao"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_kakao"
+            app:layout_constraintEnd_toEndOf="@id/imagebutton_google"
+            app:layout_constraintStart_toStartOf="@id/imagebutton_google"
+            app:layout_constraintTop_toBottomOf="@id/imagebutton_google" />
 
         <TextView
+            android:id="@+id/textview_sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:includeFontPadding="false"
-            android:text="@string/text_welcome2"
+            android:onClick="@{() -> viewmodel.goLoginActivity()}"
+            android:text="@string/text_welcome3"
             android:textColor="@color/general_theme_white"
             android:textFontWeight="700"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imagebutton_kakao" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Todo: 피그마 비율대로 했는데 조금 다름. 수정 필요   -->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_regular"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="110dp"
-        android:background="@drawable/bg_rectangle_round"
-        android:backgroundTint="@color/general_theme_white"
-        android:fontFamily="@font/noto_sans_kr_bold"
-        android:text="@string/sign_up"
-        android:textColor="@color/main_theme_blue"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.07"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout_welcome"
-        app:layout_constraintWidth_percent="0.88" />
-
-    <ImageButton
-        android:id="@+id/imagebutton_google"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/btn_google"
-        app:layout_constraintEnd_toEndOf="@id/button_regular"
-        app:layout_constraintStart_toStartOf="@id/button_regular"
-        app:layout_constraintTop_toBottomOf="@id/button_regular" />
-
-    <ImageButton
-        android:id="@+id/imagebutton_kakao"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/btn_kakao"
-        app:layout_constraintEnd_toEndOf="@id/imagebutton_google"
-        app:layout_constraintStart_toStartOf="@id/imagebutton_google"
-        app:layout_constraintTop_toBottomOf="@id/imagebutton_google" />
-
-    <TextView
-        android:id="@+id/textview_sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/noto_sans_kr_bold"
-        android:includeFontPadding="false"
-        android:text="@string/text_welcome3"
-        android:textColor="@color/general_theme_white"
-        android:textFontWeight="700"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imagebutton_kakao" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
